crates/forge_services/src/snapshots/forge_services__tool_service__test__failed_tool_call.snap
---
source: crates/forge_services/src/tool_service.rs
expression: result
---
---
name: failure_tool
call_id: test
status: error
---

ERROR:
Caused by: Tool call failed with simulated failure
