crates/forge_services/src/snapshots/forge_services__tool_service__test__successful_tool_call.snap
---
source: crates/forge_services/src/tool_service.rs
expression: result
---
---
name: success_tool
call_id: test
status: success
---
Success with input: "test input"
