crates/forge_services/src/snapshots/forge_services__tool_service__test__tool_not_found.snap
---
source: crates/forge_services/src/tool_service.rs
expression: result
---
---
name: nonexistent_tool
call_id: test
status: error
---

ERROR:
Caused by: No tool with name 'nonexistent_tool' was found. Please try again with one of these tools failure_tool, success_tool
